# hangbo

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO  check_start_time_month.py  check_unmapped_customer_records.py  fill_year_month_columns.py  findings.md  generate_ppt.py  hangbo_gui.py  job.toml  job01-02.toml  job03.toml  job09.toml  job_Q1.toml  main_pipeline.py  merge_questionnaire_workbooks.py  merge_sample_summary.py  phase_column_preprocess.py  pipeline.defaults.toml  pipeline_config.py  pipeline_models.py  pipeline_paths.py  pipeline_precheck.py  pipeline_runtime.py  ppt_chart_renderer.py  ppt_job.example.toml  progress.md  pyproject.toml  report_jobs.1-2月.toml  report_jobs.3月.toml  report_jobs.Q1.toml  report_jobs.directory.example.toml  report_jobs.example.toml  sample_table.default.toml  sample_table.py  summary_table.py  (+5 more)
docs/: PPT批量生成.md  PPT生成说明.md  README.md  UI适配新数据分析流程计划.md  survey_stats客户类别规则说明.md  survey_stats目录模式.md  survey_stats计算模式.md  survey_stats配置结构说明.md  workflow.md  一、会展客户满意度不高原因分析.md  从原始数据到PPT全流程命令.md  其他客户大类满意度变化简析.md  同名Excel问卷数据合并.md  同名问卷列差异对照-2026-04-09.md  启动命令笔记.md  四个客户大类总体对比汇报版.md  四个客户大类维度满意度趋势对比表.md  客户分组二级指标对比.md  客户大类与客户分组维度对比表.md  客户类别对照表V1.0数据标签核查.md  客户类型汇总表.md  平台界面线框图.md  开始填表时间月份检查.md  批次管理与配置持久化.md  指标体系.md  指标体系table.md  数据准备与预查错.md  数据分析业务流程总览.md  新数据分析流程说明.md  未映射客户记录核查.md  样本统计表.md  模板客户标准映射表.md  汇总文件对应关系.md  用户运行用例故事.md  疑似客户类型错分记录.md  统计口径与结果说明.md  跑Q1数据的命令.md  问卷数据年月填充.md  问卷期次列预处理.md  非月份满意度均值的解释.md  (+1 more)
templates/: template.pptx  二期场馆测试阶段主要问题反馈-slide.html  二期场馆测试阶段主要问题反馈.md
月报模版/: data.xlsx  (+7 more)
(+167 files in other folders)
