[project]
name = "hangbo-survey-stats"
version = "0.1.0"
description = "Survey statistics scripts for exhibition reports"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-pptx>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hangbo"]

[tool.hatch.build.targets.sdist]
only-include = [
    "pyproject.toml",
    "README.md",
    "src/hangbo",
]
